tests/paczka1/fuzzy1/76244270.err
Error in line 6: XIE4y32 A157 5,7
Error in line 11: uATfMsjuNo S50 20,3
Error in line 17: XIE4y32 S72 15,07
